# sfo.github.io

./: .gitattributes  .gitignore  .gitmodules  404.html  README.md  _config.yml  docker-compose.yml  feed.xml  index.html  robots.txt  sfo.github.io.code-workspace  sitemap.xml
_code/: endurance_sports.ipynb  setup_git-annex-standalone.sh
_code/adventofcode/lib/adventofcode/: LICENSE.md  pyproject.toml
_code/adventofcode/lib/adventofcode/adventofcode/grid/: algorithms.py  grid.py
_code/adventofcode/lib/adventofcode/adventofcode/util/: ipython_wrapper.py
_code/studtistics/: pyproject.toml
_code/studtistics/libs/putil/: pyproject.toml
_code/studtistics/libs/putil/src/putil/: __init__.py  self_merge.py
_code/studtistics/libs/putil/test/: test_self_merge.py
_code/studtistics/notebooks/: README.md  color_variance.ipynb  colorful_sets.ipynb  franchises.ipynb  general.ipynb  gwp.ipynb  price.ipynb  stonewars_adventskalender_tag19.ipynb
_data/: bibliography.bib  navigation.yml
_drafts/: 2020-04-28-office-undo-redo.md  2021-05-17-lego-stud.io-linux.md  2023-12-04-raspberry-pi-setup.md  2024-08-02-fix-zigbee2mqtt.md  2024-11-08-spamassassin-server.md  2025-06-06_tracking-flarm.md  2025-09-07-cubing-robots.md  2025-11-18_cost-3d-print-vs-injection-moulding.md  2026-02-03_lego_patents.md  2026-02-03_lego_smart_play_patents.md
_pages/: about.md  category-archive.md  impressum.md  index.md  privacy.md  research.html  research.md  tag-archive.md  year-archive.md
_posts/: 2018-04-28-ubuntu-dock-config.md  2018-04-28_ubuntu-dock-config.md  2024-06-03-i3.md  (+24 more)
(+157 files in other folders)
