[project]
name = "studtistics"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.7.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "putil",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = [
    "libs/putil",
]

[tool.uv.sources]
putil = { workspace = true }
