[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adventofcode"
version = "0.1.0"
description = "Useful stuff that is helpful for solving Advent of Code challenges"
authors = [
	{name="Stanley Förster", email="stanley.foerster@gmail.com"}
]
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
	"numpy",
    "sortedcollections",
]

