[project]
name = "putil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stanley F", email = "stanley.foerster@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]
